--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Pizza</a>
-    
+    <img src="img/chef.jpg" height="310" width="310">
+    <ul>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+    </ul>
 </body>
 </html>
