--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Odin Recipes</h1>
     <img src="img/chef.jpg" height="310" width="310">
     <ul>
-        <li><a href="recipes/pizza.html">Pizza</a></li>
+        <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
     </ul>
 </body>
 </html>
