--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>Pizza</h1>
-    <a href="../index.html">Home</a>
+    <p>
+        <a href="../index.html">Home</a>
+    </p>
+    <img src="../img/pizza.jpg" height="310" width="340">
+    
 
 
 </body>
