--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1>Homemade Pepperoni Pizza</h1>
     <p>
         <a href="../index.html">Home</a>
     </p>
