added basic info for pizza recipe

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,10 @@
     <p>
         <a href="../index.html">Home</a>
     </p>
-    <img src="../img/pizza.jpg" height="310" width="340">
+    <img src="../img/pizza.jpg" height="310" width="360">
+    <p><strong>Prep Time:</strong> 20 mins <strong>Cook Time:</strong> 20 mins</p>
+    <p><strong>Total Time:</strong> 40 mins <strong>Servings:</strong> 6</p>
+    
     
 
 
