--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -20,6 +20,7 @@
     <h2>
         Ingredients
     </h2>
+    <h3>Pizza Sauce</h3>
     <ul>
         <li>
             1/2 cup water
@@ -41,8 +42,41 @@
         </li>
         <li>
             1/2 teaspoon sugar, salt, and black pepper
+        </li>    
+    </ul>
+     <h3>
+       Crust 
+    </h3>
+    <ul>
+        <li>
+            3 1/4 cups all-purpose flour, or more as needed
         </li>
-        
+        <li>
+            2(.25 ounces) envelopes of rapid rise yeast
+        </li>
+        <li>
+            1 tablespoon sugar
+        </li>
+        <li>
+            1 1/2 teaspoon salt
+        </li>
+        <li>
+            1 1/3 cups very warm water (~120 degrees F)
+        </li>
+        <li>
+            1/3 cup oil
+        </li>
+    </ul>
+    <h3>
+        Toppings
+    </h3>
+    <ul>
+        <li>
+            1 cup shredded mozzarella
+        </li>
+        <li>
+            1 (6 ounce) package of pepperoni
+        </li>
     </ul>
 
     
