--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <img src="img/chef.jpg" height="310" width="310">
     <ul>
         <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
+        <li><a href="recipes/mac-n-cheese.html">Mac n Cheese</a></li>
+        <li><a href="recipes/tacos.html">Tacos</a></li>
     </ul>
 </body>
 </html>
