started mac and cheese recipe page

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Homemade Pepperoni Pizza</title>
 </head>
-<body>
-    <h1>Homemade Pepperoni Pizza</h1>
+
+<body>   
     <p>
         <a href="../index.html">Home</a>
     </p>
+    <h1>Homemade Pepperoni Pizza</h1>
+    <p>This pepperoni pizza recipe produces a quick and easy classic! Delicious homemade pizza crust and tomato sauce have never been easier.</p>
     <img src="../img/pizza.jpg" height="310" width="360">
     <p>
         <strong>Prep Time:</strong> 20 mins <strong>Cook Time:</strong> 20 mins
@@ -105,10 +107,5 @@
             Bake in the preheated oven until crusts are browned and cheese is bubbly, 18 to 20 minutes. Rotate pizza pans between the top and bottom oven racks halfway through baking.
         </li>
     </ol>
-
-    
-    
-
-
 </body>
 </html>
