--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="img/chef.jpg" height="310" width="310">
+    <img src="img/chef.jpg" height="310" width="310" alt="chef">
     <ul>
         <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
         <li><a href="recipes/mac-n-cheese.html">Mac n Cheese</a></li>
