added <br> to directions text for better readability

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -92,10 +92,13 @@
             garlic powder, onion powder, sugar, salt, and pepper in a medium bowl until smooth. Set aside.
         </li>
         <li>
-            Make crust: Combine 2 cups flour, yeast, sugar, and salt in a large bowl. Add warm water and oil; mix until well blended, about 1 minute. Gradually add remaining flour, a little at a time, until a soft, sticky dough forms.
+            Make crust: Combine 2 cups flour, yeast, sugar, and salt in a large bowl. <br>
+            Add warm water and oil; mix until well blended, about 1 minute. <br>
+            Gradually add remaining flour, a little at a time, until a soft, sticky dough forms.
         </li>
         <li>
-           Transfer dough to a floured surface; knead until dough is smooth and elastic, about 4 minutes. Add more flour as needed. (If using RapidRise yeast, let dough rest, covered, for 10 minutes.) 
+           Transfer dough to a floured surface; knead until dough is smooth and elastic, about 4 minutes. <br>
+           Add more flour as needed. (If using RapidRise yeast, let dough rest, covered, for 10 minutes.) 
         </li>
         <li>
           Divide dough in half. Lightly flour your hands, then pat each piece of dough onto the prepared pizza pans.  
@@ -104,7 +107,8 @@
             Top dough with sauce, cheese, and pepperoni.
         </li>
         <li>
-            Bake in the preheated oven until crusts are browned and cheese is bubbly, 18 to 20 minutes. Rotate pizza pans between the top and bottom oven racks halfway through baking.
+            Bake in the preheated oven until crusts are browned and cheese is bubbly, 18 to 20 minutes. <br>
+            Rotate pizza pans between the top and bottom oven racks halfway through baking.
         </li>
     </ol>
 </body>
