--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -89,7 +89,7 @@
         </li>
         <li>
             Make sauce: Whisk together water, tomato paste, oregano, basil, 
-            garlic powder, onion powder, sugar, salt, and pepper in a medium bowl until smooth. Set aside.
+            <br>garlic powder, onion powder, sugar, salt, and pepper in a medium bowl until smooth. Set aside.
         </li>
         <li>
             Make crust: Combine 2 cups flour, yeast, sugar, and salt in a large bowl. <br>
