--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="recipes/pizza.html">Homemade Pepperoni Pizza</a></li>
         <li><a href="recipes/mac-n-cheese.html">Mac n Cheese</a></li>
-        <li><a href="recipes/tacos.html">Tacos</a></li>
+        <li><a href="recipes/tacos.html">Chicken Tacos</a></li>
     </ul>
 </body>
 </html>
